# review-radar

./: .gitignore  CLAUDE.md  COMMANDS.md  LICENSE  README.md  dataset-diagram.md  product-report-abstract.md  structure-diagram.md  workflow-diagram.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: charts.py  chat.py  reports.py  simulation.py  tasks.py
backend/app/jobs/: monthly_pipeline.py
backend/app/models/: __init__.py  aggregate.py  config.py  report.py  review.py  task.py
backend/app/schemas/: __init__.py  chart.py  chat.py  simulation.py  task.py
backend/app/services/: aggregator.py  chat.py  embedder.py  loader.py  mailer.py  processor.py  reporter.py  vector_store.py
backend/migrations/: env.py
backend/migrations/versions/: 749e955efd64_initial_schema.py  a3f81c2e9d47_add_reports_table.py  c8f92d3a1b05_add_chart_data_to_tasks.py
backend/scripts/: advance_all.py  check_data.py  generate_missing_reports.py
frontend/: index.html  package-lock.json  package.json  screenshot.mjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/charts/: ChartRenderer.tsx
frontend/src/components/chat/: AddToReportButton.tsx  ChatMessage.tsx  ChatPanel.tsx
frontend/src/components/layout/: DashboardLayout.tsx
frontend/src/hooks/: useChartData.ts  useChat.ts  useSimulation.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
notebooks/: 01_explore_raw_data.ipynb  02_enriched_data_explore.ipynb
(+6 files in other folders)
