[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "anthropic>=0.112.0",
    "apscheduler>=3.11.3",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "pydantic-settings>=2.14.2",
    "python-dateutil>=2.9.0.post0",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "pandas>=3.0.4",
]
